# some-python-demos

./: .gitignore  README.md  Taskfile.yml
fastapi/: .gitignore  README.md  Taskfile.yml  pyproject.toml
fastapi/src/fastapi_demo/: __init__.py  db.py  main.py
fastapi/tests/: test_db.py  test_main.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: chat.js  main.js  style.css  tickets.js
infra/: .gitignore  README.md
infra/bootstrap/: main.tf
infra/examples/: azurerm_ai_foundry.tf
infra/main/: main.tf  outputs.tf
maf/: .env.example  README.md  Taskfile.yml  pyproject.toml
maf/src/maf/: __init__.py  agent.py  app.py  settings.py
package/: README.md
script/: README.md
